resources/css/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import 'flowbite';

html {
  @apply scroll-smooth;
}

.app-content {
  @apply text-base leading-relaxed text-gray-800;

  h1, h2, h3, h4, h5 {
    @apply text-red-800
  }

  h1 {
    @apply text-3xl font-bold mt-10 mb-6;
  }

  h2 {
    @apply text-2xl font-semibold mt-8 mb-4;
  }

  h3 {
    @apply text-xl font-semibold mt-4 mb-2;
  }

  p {
    @apply mb-4;
  }

  a:not(.app-card) {
    @apply text-red-700 hover:text-red-500 underline;
  }

  ul {
    @apply list-disc pl-6 mb-4;
  }

  ol {
    @apply list-decimal pl-6 mb-4;
  }

  li {
    @apply mb-1;
  }

  li::marker {
    @apply text-red-700
  }

  blockquote {
    @apply border-l-4 border-red-100 pl-4 italic text-red-600 my-4;
  }
}

.app-wysiwyg {
  a {
    @apply underline
  }
}

.iframe-wrapper {
  position: relative;
  width: 100%;
  padding-bottom: 56.25%; /* 16:9 aspect ratio */
  height: 0;
  overflow: hidden;
}

.iframe-wrapper iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100% !important;
  height: 100% !important;
  border: 0;
}

.app-button {
  @apply inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-red-600 rounded-lg hover:bg-red-500 focus:ring-4 focus:outline-none focus:ring-red-300;
}

.app-card {
  @apply max-w-sm bg-white border border-red-100 rounded-lg shadow-sm hover:bg-red-50 hover:border-red-200;
}

.app-card-heading {
  @apply text-2xl font-bold tracking-tight text-gray-900;
}

.app-condensed {
  @apply mx-auto max-w-2xl px-2 sm:px-4 md:px-8
}

.app-section {
  @apply px-2 sm:px-4 md:px-8 py-12 sm:py-16 lg:py-20;
}

